Apply extensive suggestions from code review
Co-Authored-By: Lauren Chambers <Lauren.m.chambers96@gmail.com>

--- a/notebooks/01.04-Nonuniform-sensitivity.ipynb
+++ b/notebooks/01.04-Nonuniform-sensitivity.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "Vingetting and dust can reduce the amount of light reaching the CCD chip while pixel-to-pixel sensitivity variations affects the counts read from the chip.\n",
     "\n",
-    "The code to produce the simulated sensitivty map (aka flat image) is long enough that is not included in this notebook. We load it instead from [image_sim.py](image_sim.py)."
+    "The code to produce the simulated sensitivity map (aka flat image) is long enough that is not included in this notebook. We load it instead from [image_sim.py](image_sim.py)."
    ]
   },
   {
