--- a/notebooks/01.05-Calibration-overview.ipynb
+++ b/notebooks/01.05-Calibration-overview.ipynb
@@ -25,7 +25,7 @@
     "\\text{stars} + \\text{noise} = \\frac{\\text{raw image} - \\text{bias} - \\text{dark current}}{\\text{flat}} - \\text{sky}\n",
     "$$\n",
     "\n",
-    "#### It is *impossible* to remove the noise from the raw image because the noise is random.\n",
+    "**It is *impossible* to remove the noise from the raw image because the noise is random.**\n",
     "\n",
     "The dark current is typically calculated from a *dark frame* (aka dark image). Such an image has bias and read noise in it as well, so:\n",
     "\n",
@@ -66,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### FIrst, some stars with noise\n",
+    "### First, some stars with noise\n",
     "\n",
     "The image below shows stars but shows quite a bit of noise as well."
    ]
