--- a/notebooks/01.06-Image-combination.ipynb
+++ b/notebooks/01.06-Image-combination.ipynb
@@ -113,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Image view of these distributions\n",
+    "### Image view of these distributions\n",
     "\n",
     "As suggested above, we could view each of these distributions as an image instead of a histogram. One take away from the diagram below is that in this case, the difference between mean and median is not apparent.\n",
     "\n",
@@ -266,7 +266,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Please do not use the code below for reducing your data...\n",
+    "**Please do not use the code below for reducing your data...**\n",
     "\n",
     "...in the next set of notebooks we'll walk through the package [ccdproc](https://ccdproc.readthedocs.io), which automates much of what you see below. The section below demonstrates and explains some of what's happening behind the scenes in [ccdproc](https://ccdproc.readthedocs.io)."
    ]
