--- a/notebooks/01.08-Overscan.ipynb
+++ b/notebooks/01.08-Overscan.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "However, whether or not the overscan is useful depends on the camera. It's advisable to examine the overscan part of the camera you're using before deciding if you should include it in image reduction.\n",
     "\n",
-    "One important note: *overscan always includes bias, read noise, and dark current*. The overscan pixels are still pixels, and just like any other pixel includes dark current and is subject to read noise. Many sources describe overscan as correcting for bias, but if the dark current for the camera is negligble, as it often is for cryogenically cooled cameras, then the overscan is essentially bias.\n",
+    "One important note: *overscan always includes bias, read noise, and dark current*. The overscan pixels are still pixels, and just like any other pixel includes dark current and is subject to read noise. Many sources describe overscan as correcting for bias, but if the dark current for the camera is negligible, as it often is for cryogenically cooled cameras, then the overscan is essentially bias.\n",
     "\n",
     "The read noise in the overscan is reduced by averaging over the overscan region. That will be covered in a later notebook; this notebook focuses on what the overscan looks like and how to decide whether or not to use it."
    ]
