--- a/notebooks/01.09-reading-images.ipynb
+++ b/notebooks/01.09-reading-images.ipynb
@@ -141,7 +141,7 @@
     "image_path = Path(data_directory) / image_name\n",
     "\n",
     "hdu_list = fits.open(image_path)\n",
-    "hdu_list"
+    "hdu_list.info()"
    ]
   },
   {
@@ -235,7 +235,7 @@
    "source": [
     "## Option 3: Working with a directory of images using `ImageFileCollection`\n",
     "\n",
-    "The affiliated package [cdcproc](https://ccdproc.readthedocs.io/) provides an easier way to work with collections of images in a directory: an `ImageFileCollection`. The `ImageFileCollection` is initialized with the name of the directory containing the images."
+    "The affiliated package [ccdproc](https://ccdproc.readthedocs.io/) provides an easier way to work with collections of images in a directory: an `ImageFileCollection`. The `ImageFileCollection` is initialized with the name of the directory containing the images."
    ]
   },
   {
