--- a/notebooks/02.00-Handling-overscan,-trimming,-and-bias-subtraction.ipynb
+++ b/notebooks/02.00-Handling-overscan,-trimming,-and-bias-subtraction.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "The bias in a CCD camera is a DC offset applied to all pixels so that when the voltage in each pixel is converted to a number the number will always be positive. In an ideal CCD the bias would be the same for every pixel and not change over time. In practice, the bias is slightly different for each pixel, and can vary by a count or two from night to night or during a night.\n",
     "\n",
-    "A bias *image* is a picture taken with the shutter close and zero exposure time; think about it as a command to the camera to do whatever it usually does to prepare the camera's electronics to take an image and then immediately read out the CCD as though you had taken a picture."
+    "A bias *image* is a picture taken with the shutter closed and zero exposure time; think about it as a command to the camera to do whatever it usually does to prepare the camera's electronics to take an image and then immediately read out the CCD as though you had taken a picture."
    ]
   },
   {
