--- a/notebooks/02.01-Calibrating-bias-images.ipynb
+++ b/notebooks/02.01-Calibrating-bias-images.ipynb
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ### Decide where to put your calibrated images\n",
+    "### Decide where to put your calibrated images\n",
     " \n",
     "Though it is possible to overwrite your raw data with calibrated images that is a bad idea. Here we create a folder called `example1-reduced` that will contain the calibrated data and create it if it doesn't exist."
    ]
@@ -72,7 +72,7 @@
     "\n",
     "The data for this example can be downloaded from [http://www.stsci.edu/~etollerud/python_imred_data.tar](http://www.stsci.edu/~etollerud/python_imred_data.tar)\n",
     "\n",
-    "In what follows, the unpacked data is presumed to be available in the same direction as this notebook."
+    "In what follows, the unpacked data is presumed to be available in the same directory as this notebook."
    ]
   },
   {
@@ -116,7 +116,7 @@
    "source": [
     "### Determine overscan region\n",
     "\n",
-    "Please see the discussion of this camera in [the overscan notebook](01.08-Overscan.ipynb#Case-1:-Cryogenically-cooled-Large-Format-Camera-(LFC)-at-Palomar) for the appropriate overscan regioin to use for this camera. Note, in particular, that it differs from the the value given in the `BIASSEC` keyword in the header of the images."
+    "Please see the discussion of this camera in [the overscan notebook](01.08-Overscan.ipynb#Case-1:-Cryogenically-cooled-Large-Format-Camera-(LFC)-at-Palomar) for the appropriate overscan region to use for this camera. Note, in particular, that it differs from the the value given in the `BIASSEC` keyword in the header of the images."
    ]
   },
   {
@@ -130,7 +130,7 @@
     "\n",
     "First, let's see what the values of `BIASSEC` which sometimes (but not always) indicates that there is is overscan and which part of the chip is the overscan, and `CCDSEC`, which is sometimes, but not always present, and indicates which part of the chip light hit.\n",
     "\n",
-    "Note that neither of these are standard; sometimes, for example, `trimsec` is used instead of `ccdsec`, and there are likely other variants. Some images may have neither keyword in the header. That does not necessary indicate that ovserscan isn't present. The best advice is to carefully check the documentation for the camer you are using. "
+    "Note that neither of these are standard; sometimes, for example, `trimsec` is used instead of `ccdsec`, and there are likely other variants. Some images may have neither keyword in the header. That does not necessary indicate that ovserscan isn't present. The best advice is to carefully check the documentation for the camera you are using. "
    ]
   },
   {
@@ -146,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The fits header claims the overscan extends from the 2049th column to the end of the image (this is one-based indexing) and that the part of the image exposed to light extends over all rows and from the first column to the 2048$^{th}$ column (again, this is one-indexed)."
+    "The fits header claims the overscan extends from the 2049$^{th}$ column to the end of the image (this is one-based indexing) and that the part of the image exposed to light extends over all rows and from the first column to the 2048$^{th}$ column (again, this is one-indexed)."
    ]
   },
   {
@@ -169,9 +169,9 @@
    "source": [
     "As discussed in [the overscan notebook](01.08-Overscan.ipynb#Case-1:-Cryogenically-cooled-Large-Format-Camera-(LFC)-at-Palomar), the useful overscan region for this camera starts at the 2055$^{th}$ column, not column 2049 as indicated by the `BIASSEC` keyword in the header. This situation is not unusual; column 2049 is the first of the columns masked by the manufacturer from light but there is some leakage into this region from the rest of the CCD.\n",
     "\n",
-    "If you are going to overscan you need to carefully emaine the overscan in a few representative images to understand which part of the overscan to use.\n",
+    "If you are going to overscan you need to carefully examine the overscan in a few representative images to understand which part of the overscan to use.\n",
     "\n",
-    "In what follow, we will use for the overscan the region (Python/numpy indexing) `[:, 2055:]`."
+    "In what follows, we will use for the overscan the region (Python/numpy indexing) `[:, 2055:]`."
    ]
   },
   {
@@ -326,7 +326,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ### Decide where to put your calibrated images\n",
+    "### Decide where to put your calibrated images\n",
     " \n",
     "Though it is possible to overwrite your raw data with calibrated images that is a bad idea. Here we create a folder called `example2-reduced` that will contain the calibrated data and create it if it doesn't exist."
    ]
@@ -485,7 +485,7 @@
    "source": [
     "## Example 3: No overscan at all\n",
     "\n",
-    "If there is no overscan then there is, in principle, nothing to be done with the bias frames. It may be convient to copy them to the directory with the rest of your reduced images. The code below does that."
+    "If there is no overscan then there is, in principle, nothing to be done with the bias frames. It may be convenient to copy them to the directory with the rest of your reduced images. The code below does that."
    ]
   },
   {
