--- a/notebooks/02.04-Combine-bias-images-to-make-master.ipynb
+++ b/notebooks/02.04-Combine-bias-images-to-make-master.ipynb
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The remained of this section assumes the calibrated bias images are in the folder `example1-reduced` which is created in the previous notebook."
+    "The remainder of this section assumes the calibrated bias images are in the folder `example1-reduced` which is created in the previous notebook."
    ]
   },
   {
@@ -100,7 +100,7 @@
     "combined_bias = ccdp.combine(calibrated_biases,\n",
     "                             method='average',\n",
     "                             sigma_clip=True, sigma_clip_low_thresh=5, sigma_clip_high_thresh=5,\n",
-    "                             sigma_clip_func=np.ma.median, signma_clip_dev_func=mad_std,\n",
+    "                             sigma_clip_func=np.ma.median, sigma_clip_dev_func=mad_std,\n",
     "                             mem_limit=350e6\n",
     "                            )\n",
     "\n",
