--- a/notebooks/03.01-Dark-current-The-ideal-case.ipynb
+++ b/notebooks/03.01-Dark-current-The-ideal-case.ipynb
@@ -174,7 +174,7 @@
     "d_e(t) = d_c(T) t.\n",
     "$$\n",
     "\n",
-    "For liquid-cooled cameras, particularly ones cooled bu liquid nitrogen, the operating temperature doesn't change. For thermo-electrically cooled cameras one is able to set the desired operating temperature. As a result, you should be able to ignore the temperature dependence of the dark current.\n",
+    "For liquid-cooled cameras, particularly ones cooled by liquid nitrogen, the operating temperature doesn't change. For thermo-electrically cooled cameras one is able to set the desired operating temperature. As a result, you should be able to ignore the temperature dependence of the dark current.\n",
     "\n",
     "The thermo-electric coolers can usually cool by some fixed amount below the ambient temperature. Though in principle one could choose to always cool by the same fixed amount, like $50^\\circ$C below the ambient temperature, there is an advantage to always running your camera at the same temperature: dark frames taken on one date are potentially useful on another date. If the operating temperature varies then you need to make sure to take dark frames every time you observe unless you carefully characterize the temperature dependence of your dark current. \n",
     "\n",
@@ -187,7 +187,7 @@
    "source": [
     "## Illustration with dark current only, no read noise\n",
     "\n",
-    "For the purposes of illustrating some of the properties of dark current and dark frames we'll generated some simulated images in which the counts are due to dark current alone. We'll use these values:\n",
+    "For the purposes of illustrating some of the properties of dark current and dark frames we'll generate some simulated images in which the counts are due to dark current alone. We'll use these values:\n",
     "\n",
     "+ Dark current is $d_c(T) = 0.1 e^-$/pixel/sec\n",
     "+ Gain is $g = 1.5 e^-$/ADU\n",
