--- a/notebooks/03.05-Calibrate-dark-images.ipynb
+++ b/notebooks/03.05-Calibrate-dark-images.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Dark images, like any other images, need to be calibrated. Depending on the data you have and the choices you have made in reducing your data the steps to reducing your images may include:\n",
     "\n",
-    "1. Subtracting overscan (only if you decide to subtract ocverscan from all images)\n",
+    "1. Subtracting overscan (only if you decide to subtract overscan from all images)\n",
     "2. Trim the image (if it has overscan, whether you are using the overscan or not)\n",
     "3. Subtract bias (if you need to scale the calibrated dark frames to a different exposure time)."
    ]
@@ -201,7 +201,7 @@
     "\n",
     "In this case the only dark frames have exposure time 90 sec. Though that matches the exposure time of the science images, the flat field images are much shorter exposure time, ranging from 1 sec to 1.21 sec. That type range of exposure is typical when twilights flats are taken. Since these are a much different exposure time than the darks, the dark frames will need to be scaled.\n",
     "\n",
-    "Recall that for this camera the overcan is not useful and should simply be trimmed off.\n",
+    "Recall that for this camera the overscan is not useful and should simply be trimmed off.\n",
     "\n",
     "Given this, we will:\n",
     "\n",
