Rewording of combination summary
Co-Authored-By: Lauren Chambers <Lauren.m.chambers96@gmail.com>

--- a/notebooks/01.06-Image-combination.ipynb
+++ b/notebooks/01.06-Image-combination.ipynb
@@ -405,7 +405,7 @@
    "source": [
     "## Summary\n",
     "\n",
-    "Combine images by first excluding extreme values using sgima clipping with median as the typical value and the median absolute deviation estimator of the standard deviation and then average the remaining pixels across all of the images.\n",
+    "Combine images by (1) excluding extreme values using sigma clipping, with the median as the typical value and the MAD estimator of the standard deviation, and then (2) averaging the remaining pixels across all of the images.\n",
     "\n",
     "Note that in the distribution below the clipped average is a narrower distribution (less noise) than the median but that it still excludes the extreme value that appeared in one image."
    ]
