Update comments in 01.03, 01.05, 01.08

--- a/notebooks/01.03-Construction-of-an-artificial-(but-realistic)-image.ipynb
+++ b/notebooks/01.03-Construction-of-an-artificial-(but-realistic)-image.ipynb
@@ -127,7 +127,7 @@
    "source": [
     "##  Bias\n",
     "\n",
-    "Bias is an offset voltage (which translates into some non-zero number of counts) added to every pixel in the image to ensure that when voltages are converted to counts there is never a negative count. Note that in the noise image above, some counts are positive and some are negative, as you would expect for a Gaussian distribution centered on zero.\n",
+    "Bias is an offset voltage (which translates into some non-zero number of counts) added to every pixel in the image to ensure that when voltages are converted to counts there is never a negative count. Note that in the noise image above, some counts are positive and some are negative, as you would expect for a Gaussian distribution centered on zero. Pixel values are typically read out from the electronics as *positive* numbers, though. Adding a constant voltage, which corresponds to a constant, positive number, ensures that even an image which consists entirely of noise has no negative values.\n",
     "\n",
     "The bias value is roughly the same across the CCD chip, though it's not uncommon to have \"bad\" columns and pixels in which the bias level is consistently offset from the rest of the chip.\n",
     "\n",
