--- a/notebooks/01.05-Calibration-overview.ipynb
+++ b/notebooks/01.05-Calibration-overview.ipynb
@@ -68,7 +68,7 @@
    "source": [
     "### First, some stars with noise\n",
     "\n",
-    "The image below shows stars but shows quite a bit of noise as well."
+    "The image below shows stars (the larger \"blobs\" in the image) but shows quite a bit of noise as well (the much smaller \"dots\")."
    ]
   },
   {
@@ -79,9 +79,9 @@
    "source": [
     "image = np.zeros([2000, 2000])\n",
     "gain = 1.0\n",
-    "noise_amount = 500 \n",
+    "noise_amount = 1500 \n",
     "\n",
-    "stars_with_noise = imsim.stars(image, 50, max_counts=2000) + imsim.read_noise(image, noise_amount, gain=gain)\n",
+    "stars_with_noise = imsim.stars(image, 50, max_counts=2000, fwhm=10) + imsim.read_noise(image, noise_amount, gain=gain)\n",
     "\n",
     "show_image(stars_with_noise, cmap='gray', percu=99.9)\n",
     "plt.title('Stars with noise')"
