--- a/notebooks/01.08-Overscan.ipynb
+++ b/notebooks/01.08-Overscan.ipynb
@@ -17,7 +17,9 @@
     "\n",
     "One important note: *overscan always includes bias, read noise, and dark current*. The overscan pixels are still pixels, and just like any other pixel includes dark current and is subject to read noise. Many sources describe overscan as correcting for bias, but if the dark current for the camera is negligible, as it often is for cryogenically cooled cameras, then the overscan is essentially bias.\n",
     "\n",
-    "The read noise in the overscan is reduced by averaging over the overscan region. That will be covered in a later notebook; this notebook focuses on what the overscan looks like and how to decide whether or not to use it."
+    "The read noise in the overscan is reduced by averaging over the overscan region. That will be covered in a later notebook; this notebook focuses on what the overscan looks like and how to decide whether or not to use it.\n",
+    "\n",
+    "In this notebook we will look at the overscan region for two different cameras, a cryogenically cooled camera in which the overscan prvoides useful information and a thermo-electrically cooled camera in which the overscan does not provide useful information."
    ]
   },
   {
