Reword parts of image combination

--- a/notebooks/01.06-Image-combination.ipynb
+++ b/notebooks/01.06-Image-combination.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "+ reduces noise in images\n",
     "+ can remove transient artifacts like cosmic rays and satellite tracks\n",
-    "+ can remove stars in twilight flats from the combined image\n",
+    "+ can remove stars in [flat images taken at twilight](FIX_LINK)\n",
     "\n",
     "It's essential that several of each type of calibration image (bias, dark, flat) be taken. Combining them reduces the noise in the images by roughly a factor of $1/\\sqrt{N}$, where $N$ is the number of images being combined. As shown in the previous notebook, using a single calibration image actually *increases* the noise in your image.\n",
     "\n",
@@ -54,7 +54,9 @@
    "source": [
     "## Combination method: average or median?\n",
     "\n",
-    "In this section we'll look at a simplified version of the challenges of combining images to reduce noise. It's fair to think of astronomical images (especially bias and dark images) as being a Gaussian distribution of pixel values around the bias level, and a width related to the read noise of the detector. In properly done flat images the noise is technically a Poisson distribution, but with a large enough number of counts, the distribution is indistinguishable from a Gaussian distribution whose width is related to the square root of the number of counts. While some regions of a science image are dominated by Poisson noise from sources in the image, most of the image will be dominated by Gaussian read noise from the detector or Poisson noise from the sky background.\n",
+    "In this section we'll look at a simplified version of the challenges of combining images to reduce noise. It's fair to think of astronomical images (especially bias and dark images) as being a Gaussian distribution of pixel values around the bias level, and a width related to the read noise of the detector. To simplify what follows, we will work arrays of random numbers drawn from a Gaussian distribution instead of with astronomical images.\n",
+    "\n",
+    "In properly done flat images the noise is technically a Poisson distribution, but with a large enough number of counts, the distribution is indistinguishable from a Gaussian distribution whose width is related to the square root of the number of counts. While some regions of a science image are dominated by Poisson noise from sources in the image, most of the image will be dominated by Gaussian read noise from the detector or Poisson noise from the sky background.\n",
     "\n",
     "Instead of working with a combination of images, we'll create 100 Gaussian distributions with a mean of zero, and a standard deviation of one, and combine those two different ways: by finding the average and by finding the median. Each distribution has size $320^2$ so that we can view it as either a distribution of 102,400 values or as an image that is $320 \\times 320$.\n",
     "\n",
@@ -79,7 +81,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we've created the distributions and combined them in two different ways, let's take a look at them. The [`hist` function from astropy.visualization](https://astropy.readthedocs.io/en/stable/visualization/histogram.html) is used below because it can figure out what bin size to use for your data. *Note: but beware https://github.com/astropy/astropy/issues/7758*"
+    "Now that we've created the distributions and combined them in two different ways, let's take a look at them. The [`hist` function from astropy.visualization](https://astropy.readthedocs.io/en/stable/visualization/histogram.html) is used below because it can figure out what bin size to use for your data. \n",
+    "\n",
+    "<!-- *Note: but beware https://github.com/astropy/astropy/issues/7758* -->"
    ]
   },
   {
