Remove a wildcard import

--- a/notebooks/01.04-Nonuniform-sensitivity.ipynb
+++ b/notebooks/01.04-Nonuniform-sensitivity.ipynb
@@ -29,7 +29,7 @@
     "import numpy as np\n",
     "\n",
     "from convenience_functions import show_image\n",
-    "from image_sim import *"
+    "import image_sim as isim"
    ]
   },
   {
@@ -48,7 +48,7 @@
    "outputs": [],
    "source": [
     "image = np.zeros([2000, 2000])\n",
-    "flat = sensitivity_variations(image)"
+    "flat = isim.sensitivity_variations(image)"
    ]
   },
   {
@@ -113,11 +113,11 @@
     "bias_level = 1100\n",
     "read_noise_electrons = 5\n",
     "max_star_counts = 2000\n",
-    "bias_only = bias(image, bias_level, realistic=True)\n",
-    "noise_only = read_noise(image, read_noise_electrons, gain=gain)\n",
-    "dark_only = dark_current(image, dark, exposure, gain=gain, hot_pixels=True)\n",
-    "sky_only = sky_background(image, sky_counts, gain=gain)\n",
-    "stars_only = stars(image, 50, max_counts=max_star_counts)"
+    "bias_only = isim.bias(image, bias_level, realistic=True)\n",
+    "noise_only = isim.read_noise(image, read_noise_electrons, gain=gain)\n",
+    "dark_only = isim.dark_current(image, dark, exposure, gain=gain, hot_pixels=True)\n",
+    "sky_only = isim.sky_background(image, sky_counts, gain=gain)\n",
+    "stars_only = isim.stars(image, 50, max_counts=max_star_counts)"
    ]
   },
   {
@@ -160,7 +160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_image2 = bias_only + noise_only + dark_only + flat * (sky_background(image, 100 * sky_counts, gain=gain) + stars_only)\n",
+    "final_image2 = bias_only + noise_only + dark_only + flat * (isim.sky_background(image, 100 * sky_counts, gain=gain) + stars_only)\n",
     "show_image(final_image2, cmap='gray')"
    ]
   }
