Clarify wording in overscan notebook
Co-Authored-By: Lauren Chambers <Lauren.m.chambers96@gmail.com>

--- a/notebooks/01.08-Overscan.ipynb
+++ b/notebooks/01.08-Overscan.ipynb
@@ -46,7 +46,7 @@
     "\n",
     "The FITS header for these files includes the keyword `BIASSEC`, which indicates the nominal extent of the overscan region. Its value is `[2049:2080,1:4127]`, which indicates the overscan extends from 2048 to 2079 (Python indexing starts at 0, not 1 like in FITS) in the \"short\" direction and over the entire chip in the other direction. As we'll see shortly, the useful overscan region is smaller than this.\n",
     "\n",
-    "We'll focus here on the overscan in the side that is nominally 2048 wide; in Python that's the second index. The images below are a bias, dark, light, and flat image. The latter are particularly helpful in evaluating how much of the overscan region is useful because the average pixel value in the exposed part of the camera is typically large.\n"
+    "We'll focus here on the overscan in the side that is nominally 2048 wide; in Python that's the second index. The pixel count cross-sections plotted below are from a bias, dark, and flat image. The latter are particularly helpful in evaluating how much of the overscan region is useful because the average pixel value in the exposed part of the camera is typically large.\n"
    ]
   },
   {
