Change light image to science image in text and variable names

--- a/notebooks/01.08-Overscan.ipynb
+++ b/notebooks/01.08-Overscan.ipynb
@@ -48,7 +48,7 @@
     "\n",
     "The FITS header for these files includes the keyword `BIASSEC`, which indicates the nominal extent of the overscan region. Its value is `[2049:2080,1:4127]`, which indicates the overscan extends from 2048 to 2079 (Python indexing starts at 0, not 1 like in FITS) in the \"short\" direction and over the entire chip in the other direction. As we'll see shortly, the useful overscan region is smaller than this.\n",
     "\n",
-    "We'll focus here on the overscan in the side that is nominally 2048 wide; in Python that's the second index. The pixel count cross-sections plotted below are from a bias, dark, and flat image. The latter are particularly helpful in evaluating how much of the overscan region is useful because the average pixel value in the exposed part of the camera is typically large.\n"
+    "We'll focus here on the overscan in the side that is nominally 2048 wide; in Python that's the second index. The pixel count cross-sections plotted below are from a bias, science, and flat image. Flat images are particularly helpful in evaluating how much of the overscan region is useful because the average pixel value in the exposed part of the camera is typically large."
    ]
   },
   {
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "bias_lfc = CCDData.read('python_imred_data/ccd.001.0.fits.gz', unit='count')\n",
-    "light_g_lfc = CCDData.read('python_imred_data/ccd.037.0.fits.gz', unit='count')\n",
+    "science_g_lfc = CCDData.read('python_imred_data/ccd.037.0.fits.gz', unit='count')\n",
     "flat_g_lfc = CCDData.read('python_imred_data/ccd.014.0.fits.gz', unit='count')"
    ]
   },
@@ -78,7 +78,7 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(20,10))\n",
-    "plt.plot(light_g_lfc.data.mean(axis=0), label='Science image')\n",
+    "plt.plot(science_g_lfc.data.mean(axis=0), label='Science image')\n",
     "plt.plot(bias_lfc.data.mean(axis=0), label='Bias image')\n",
     "plt.plot(flat_g_lfc.data.mean(axis=0), label='Flat image')\n",
     "plt.grid()\n",
@@ -142,7 +142,7 @@
     "print('Time of observation')\n",
     "print('Bias   ', bias_lfc.header['date-obs'], bias_lfc.header['ut'])\n",
     "print('Flat   ', flat_g_lfc.header['date-obs'], flat_g_lfc.header['ut'])\n",
-    "print('Science', light_g_lfc.header['date-obs'], light_g_lfc.header['ut'])"
+    "print('Science', science_g_lfc.header['date-obs'], science_g_lfc.header['ut'])"
    ]
   },
   {
