Clarify overscan notebook

--- a/notebooks/01.08-Overscan.ipynb
+++ b/notebooks/01.08-Overscan.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "The read noise in the overscan is reduced by averaging over the overscan region. That will be covered in a later notebook; this notebook focuses on what the overscan looks like and how to decide whether or not to use it.\n",
     "\n",
-    "In this notebook we will look at the overscan region for two different cameras, a cryogenically cooled camera in which the overscan prvoides useful information and a thermo-electrically cooled camera in which the overscan does not provide useful information."
+    "In this notebook we will look at the overscan region for two different cameras, a cryogenically cooled camera in which the overscan provides useful information and a thermo-electrically cooled camera in which the overscan does not provide useful information."
    ]
   },
   {
@@ -119,7 +119,7 @@
     "\n",
     "#### What happens if you don't use the overscan?\n",
     "\n",
-    "Nothing particularly bad. In the specific case above, ignoring the overscan will shift the background level in the science image by roughly 20 counts. If, before doing science, the background of those images is subtracted, then this shift should be removed with the background."
+    "Nothing particularly bad. In the specific case above, ignoring the overscan will shift the background level in the science image by roughly 20 counts, since the difference between the overscan region of the science image is lower than the overscan in the other images by roughly 20 counts. If, before doing science, the background of those images is subtracted, then this shift should be removed with the background."
    ]
   },
   {
@@ -131,18 +131,6 @@
     "The overscan is useful, but the usable overscan region extends from 2055 to the end of the chip rather than from 2048 to end of the chip as the FITS header claims. Put a little differently, the appropriate `BIASSEC` for these images is `[2056:2080,1:4127]`. (Note that FITS starts numbering at 1 instead of 0, so 2055 in Python is 2056 in FITS notation.)\n",
     "\n",
     "If the science you are using requires knowing the counts to a precision of a count or two, and modeling the background in the science image isn't an option, consider using the overscan."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('Time of observation')\n",
-    "print('Bias   ', bias_lfc.header['date-obs'], bias_lfc.header['ut'])\n",
-    "print('Flat   ', flat_g_lfc.header['date-obs'], flat_g_lfc.header['ut'])\n",
-    "print('Science', science_g_lfc.header['date-obs'], science_g_lfc.header['ut'])"
    ]
   },
   {
