Change image stretch to make before/after combination contrast clearer

--- a/notebooks/02.04-Combine-bias-images-to-make-master.ipynb
+++ b/notebooks/02.04-Combine-bias-images-to-make-master.ipynb
@@ -126,9 +126,9 @@
    "source": [
     "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(20, 10))\n",
     "\n",
-    "show_image(CCDData.read(calibrated_biases[0]).data, cmap='gray', ax=ax1, fig=fig)\n",
+    "show_image(CCDData.read(calibrated_biases[0]).data, cmap='gray', ax=ax1, fig=fig, percl=90)\n",
     "ax1.set_title('Single calibrated bias')\n",
-    "show_image(combined_bias.data, cmap='gray', ax=ax2, fig=fig)\n",
+    "show_image(combined_bias.data, cmap='gray', ax=ax2, fig=fig, percl=90)\n",
     "ax2.set_title('{} bias images combined'.format(len(calibrated_biases)))"
    ]
   },
